# nakafa.lab

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
.zed/: tasks.json
data/: README.md
docs/: current-research-summary.md  discovery-pipeline.md  language-policy.md  next-steps.md  parallel-research-tracks.md  private-case-intake-threat-model.md  private-recipient-source-index.md  publication-readiness.md  repo-hygiene.md  repo-traceability-2026-04-27.md  research-protocol.md  transfusion-burden-calculator.md  zed-latex.md
paper/: case-001-doctor-handoff.tex  main.tex  references.bib
scripts/: calc_transfusion_burden.py  capture_branch_review_response.py  check_branch_review_packet.py  check_public_repo.py  check_repo.py  check_repo_language.py  clinicaltrials_client.py  fetch_bpom_products.py  fetch_clinical_trials.py  fetch_pubmed.py  project_recipient_card.py  selftest_project_recipient_card.py  selftest_repo_checks.py  selftest_transfusion_burden.py  summarize_branch_review_handoff.py  summarize_case_timeline.py
templates/: advanced-therapy-referral-readiness-template.md  assay-run-template.md  branch-review-minimum-packet-template.csv  branch-review-response-capture-template.csv  case-clinical-timeline-template.csv  clinical-owner-follow-up-log-template.md  clinical-owner-response-capture-template.md  clinical-record-index-template.csv  clinician-review-brief-template.md  hypothesis-card-template.md  lab-outreach-approval-record-template.md  lab-quote-request-template.md  lab-recipient-evidence-card-template.md  (+14 more)
(+1125 files in other folders)
