[project]
name = "nakafa-lab"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  "paper/build",
]

[tool.ruff.lint]
select = [
  "B",
  "D",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

ignore = [
  "D203",
  "D213",
]
